// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RiskAnalysisInputWrapper testing > should be render correclty with error and without infoLabel 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1w5x330-MuiPaper-root"
    >
      <div
        class="css-1okj3ks-MuiStack-root"
      />
      <div
        class="MuiBox-root css-zv7ju9"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
        >
          <div
            class="css-1b2nz6m-MuiStack-root"
          >
            <label
              class="MuiFormLabel-root MuiFormLabel-colorPrimary Mui-error css-1fypcmm-MuiFormLabel-root"
            >
              Test title
            </label>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
          >
            Test children for snapshot
          </p>
          <span
            class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-1cxaca5-MuiFormHelperText-root"
          >
            test
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`RiskAnalysisInputWrapper testing > should be render correclty with infoLabel and without error 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1w5x330-MuiPaper-root"
    >
      <div
        class="css-1okj3ks-MuiStack-root"
      />
      <div
        class="MuiBox-root css-zv7ju9"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
        >
          <div
            class="css-1b2nz6m-MuiStack-root"
          >
            <label
              class="MuiFormLabel-root MuiFormLabel-colorPrimary css-1fypcmm-MuiFormLabel-root"
            >
              Test title
            </label>
            <span
              class="MuiTypography-root MuiTypography-caption css-ol7wxs-MuiTypography-root"
            >
              Test description
            </span>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
          >
            Test children for snapshot
          </p>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`RiskAnalysisInputWrapper testing > should be render correctly with error and infoLabel 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1w5x330-MuiPaper-root"
    >
      <div
        class="css-1okj3ks-MuiStack-root"
      />
      <div
        class="MuiBox-root css-zv7ju9"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
        >
          <div
            class="css-1b2nz6m-MuiStack-root"
          >
            <label
              class="MuiFormLabel-root MuiFormLabel-colorPrimary Mui-error css-1fypcmm-MuiFormLabel-root"
            >
              Test title
            </label>
            <span
              class="MuiTypography-root MuiTypography-caption css-ol7wxs-MuiTypography-root"
            >
              test
            </span>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
          >
            Test children for snapshot
          </p>
          <span
            class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-1cxaca5-MuiFormHelperText-root"
          >
            Test error
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`RiskAnalysisInputWrapper testing > should be render correctly with error, infoLabel and helperText 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1w5x330-MuiPaper-root"
    >
      <div
        class="css-1okj3ks-MuiStack-root"
      />
      <div
        class="MuiBox-root css-zv7ju9"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
        >
          <div
            class="css-1b2nz6m-MuiStack-root"
          >
            <label
              class="MuiFormLabel-root MuiFormLabel-colorPrimary Mui-error css-1fypcmm-MuiFormLabel-root"
            >
              Test title
            </label>
            <span
              class="MuiTypography-root MuiTypography-caption css-ol7wxs-MuiTypography-root"
            >
              test
            </span>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
          >
            Test children for snapshot
          </p>
          <span
            class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-1cxaca5-MuiFormHelperText-root"
          >
            helperText
          </span>
          <span
            class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-1cxaca5-MuiFormHelperText-root"
          >
            Test error
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`RiskAnalysisInputWrapper testing > should be render correctly without description and error 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1w5x330-MuiPaper-root"
    >
      <div
        class="css-1okj3ks-MuiStack-root"
      />
      <div
        class="MuiBox-root css-zv7ju9"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
        >
          <div
            class="css-1b2nz6m-MuiStack-root"
          >
            <label
              class="MuiFormLabel-root MuiFormLabel-colorPrimary css-1fypcmm-MuiFormLabel-root"
            >
              Test title
            </label>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
          >
            Test children for snapshot
          </p>
        </div>
      </div>
    </div>
  </div>
</body>
`;
